Fix scroll offset on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,9 @@ label {
 .form-control {
   border-color: #bdbdbd;
   border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .form-control:focus {
